ARIA "on" state for role="switch" is not being announced
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox95 | --- | fixed |
People
(Reporter: jcreviston, Assigned: morgan)
References
(Blocks 1 open bug)
Details
Attachments
(2 files, 1 obsolete file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:93.0) Gecko/20100101 Firefox/93.0
Steps to reproduce:
Assign an ARIA role of 'switch' to a <div>. Ensure the element is focusable. Create relevant keyup events to toggle the value of 'aria-checked'.
Actual results:
The "off" state is announced correctly. If you press control+option+space on MAC, the aria-checked state changes to 'true', but the VoiceOver utility does not read the new state.
If you tab away from the element, then tab back, it still reads the state as "off".
If you programmatically set the element's aria-checked value to "true" initially, it still reads the state as off.
If you use a button or span element, instead of a div, the behavior is the same. I didn't try any other html elements.
If I change the role to 'checkbox', Firefox correctly announces checked and unchecked.
The off/on states are announced correctly in Chrome and Safari on the same system.
Expected results:
When the switch was toggled, and the aria-checked value was changed to "true", the VoiceOver utility should have been instructed to announce the "on" state of the switch.
Maybe Firefox doesn't fully support the role of switch yet? Although it announces the "off" state correctly.
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Comment 1•4 years ago
|
||
| Reporter | ||
Updated•4 years ago
|
Comment 2•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 3•4 years ago
|
||
I'm guessing checkbox and switch need to have the checked state exposed differently on Mac.
| Assignee | ||
Comment 4•4 years ago
•
|
||
We don't map this in AccessibleWrap.mm, so it's just getting the default mozAccessible. It should probably be something in mozActionAccessible, I can fix this.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
Comment 7•4 years ago
|
||
| bugherder | ||
Description
•