Bug 1735868: Map roles::switch to mozCheckboxAccessible r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D128639